--- a/.github/workflows/ethsign.yml
+++ b/.github/workflows/ethsign.yml
@@ -1,4 +1,4 @@
-name: Fetch and Convert EthSign Repo to AltStore
+name: Convert EthSign
 
 on:
   schedule:
@@ -26,14 +26,21 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install requests
+          pip install requests packaging
 
       - name: Fetch and Convert JSON
         run: |
-          cat <<EOF > convert.py
+          cat <<'EOF' > convert.py
           import json, requests
           from datetime import datetime
           from collections import defaultdict
+          from packaging.version import Version, InvalidVersion
+
+          def parse_version(v):
+              try:
+                  return Version(v)
+              except InvalidVersion:
+                  return Version("0.0.0")
 
           def parse_date(date_str):
               try:
@@ -67,7 +74,14 @@ jobs:
 
               filtered_apps = []
               for versions in grouped.values():
-                  versions.sort(key=lambda x: parse_date(x.get('versionDate', '')), reverse=True)
+                  # Sort by version descending, then date descending
+                  versions.sort(
+                      key=lambda x: (
+                          parse_version(x.get('version', '0.0.0')),
+                          parse_date(x.get('versionDate', ''))
+                      ), 
+                      reverse=True
+                  )
                   filtered_apps.extend(versions[:3])
 
               featured = []
@@ -95,8 +109,15 @@ jobs:
                   target_list = featured if is_featured else others
                   target_list.append(transform(app, is_featured))
 
+              # Sort with multi-level keys:
+              # developerName asc, versionDate desc, version desc
+              featured.sort(key=lambda x: x['developerName'].lower())
               featured.sort(key=lambda x: parse_date(x['versionDate']), reverse=True)
+              featured.sort(key=lambda x: parse_version(x['version']), reverse=True)
+
+              others.sort(key=lambda x: x['developerName'].lower())
               others.sort(key=lambda x: parse_date(x['versionDate']), reverse=True)
+              others.sort(key=lambda x: parse_version(x['version']), reverse=True)
 
               return featured, others
 
@@ -138,6 +159,6 @@ jobs:
             echo "No changes to commit"
           else
             git add sidestore-source.json
-            git commit -m "Update sidestore-source.json from EthSign (latest 3 versions, featured, sorted)"
+            git commit -m "Update sidestore-source.json from EthSign (latest 3 versions, featured, sorted by version/date/author)"
             git push
           fi
